# QSP-SLAM-Ellipsoidal-Prior

./: .gitignore  CMakeLists.txt  README.md  build_my.sh  complex_daresult.txt  extract_map_objects.py  image_grabber_node  image_grabber_node.cpp  instance_observation_num.txt  object_list_nonparam.txt  optimization_edges.txt  package.xml  pcd2bin  qsp_slam_mono  qsp_slam_mono.cc  qsp_slam_rgbd  qsp_slam_rgbd.cc  ros_qsp_slam_rgbd  ros_qsp_slam_rgbd.cc  ros_qsp_slam_rgbd.cpp  run.sh  save  save.cpp
configs/: config_freiburg_001.json  freiburg_001.yaml  ros_self_allobject_ground.yaml  self_allobject_ground.yaml
dataset/ros_realtime/: KeyFrameTrajectoryRGBD.txt  associate.txt
include/: Frame.h  ImageGrabber.h  KeyFrame.h  LocalMapping.h  Map.h  MapDrawer.h  MapObject.h  MapPublisher.h  System.h  Tracking.h  Viewer.h
include/core/: Ellipsoid.h
reconstruct/: __init__.py  detector2d.py  mono_sequence.py
scripts/: run_freiburg copy.sh  run_freiburg.sh  run_ros.sh  run_self.sh
src/: Frame.cc  ImageGrabber.cc  KeyFrame.cc  LocalMapping.cc  LocalMapping_util.cc  MapDrawer_util.cc  MapObject.cc  MapPublisher.cc  Map_util.cc  ObjectRenderer.cc  Optimizer_util.cc  System.cc  Tracking.cc  Tracking_ellipsoid.cc  Tracking_util.cc  Viewer.cc
src/core/: Ellipsoid.cpp  NonparamDA.cpp  PriorInfer.cpp
src/dense_builder/: builder.cpp
src/pca/: EllipsoidExtractorMultiPlanes.cpp
